# radrags

./: .dockerignore  .gitignore  AGENTS.md  DESCRIBE.md  DOCUMENTATION.md  Dockerfile  PLAN.md  README.md  build.sh  docker-compose.yml  docs.sh  mkdocs.yml  pyproject.toml  radrags.ini.example  test.sh
.agents/chromadb/: plan.md  spec.md
.agents/minimal_agent/: plan.md  spec.md
docs/: index.md
docs/api/: reference.md
docs/guide/: doc-tree.md  server.md  usage.md  vector-store.md
examples/: ssh.py  tools.py  vyos_index.py
scripts/: clone_vyos_docs.sh
src/radrags/: __init__.py  __main__.py  agent.py  chunker.py  config.py  server.py  ssh.py  vectorstore.py
tests/: conftest.py  test_agent.py  test_chunker.py  test_config.py  test_import.py  test_server.py  test_ssh.py  test_vectorstore.py
tests/fixtures/: wireguard_chunks.json
