[project]
name = "radrags"
dynamic = ["version"]
description = "RAG experiments"
requires-python = ">=3.11"
dependencies = [
    "ollama",
    "chromadb",
    "fastapi",
    "uvicorn[standard]",
    "paramiko",
]

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "httpx",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/radrags/_version.py"

[dependency-groups]
dev = [
    "black>=26.3.1",
]
